Update README, example and default parameters

--- a/test/tomloprodModal-test.html
+++ b/test/tomloprodModal-test.html
@@ -88,7 +88,7 @@
 			<!-- //////////// Example 0 default modal window -->
 			<div 
 				data-tm-title="tomloprodModal 0" 
-				data-tm-content="My background and text color is the default :-)" 
+				data-tm-content="My background color is the default :-)" 
 				class="tm-modal tm-effect tm-draggable" 
 				id="testModal0">
 					<div class="tm-wrapper">
@@ -161,9 +161,9 @@
 		
 		TomloprodModal.start({
 			closeOnOverlay: true,
-			/*removeOverlay:true,*/
-			/*showMessages: true,*/
-			/*bgColor: "#FFFFFF",
+			/*removeOverlay:true,
+			showMessages: true,
+			bgColor: "#FFFFFF",
 			textColor: "#333333",*/
 			idMainContainer: "myMainContainer"
 		});
